--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <div class="row">
         <div class="col-lg-6">
           <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="fa-brands fa-apple btn btn-dark btn-lg download-button"> Download</button>
-          <button type="button" class="fa-brands fa-google-play btn btn-outline-light btn-lg download-button"> Download</button>
+          <button type="button" class="fa-brands fa-apple btn btn-dark btn-lg download-button"><span class="download-font"> Download</span></button>
+          <button type="button" class="fa-brands fa-google-play btn btn-outline-light btn-lg download-button"><span class="download-font"> Download</span></button>
         </div>
         <div class="image-div col-lg-6">
           <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
@@ -204,8 +204,8 @@
   <section id="cta">
 
     <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="fa-brands fa-apple btn btn-dark btn-lg download-button"> Download</button>
-    <button type="button" class="fa-brands fa-google-play btn btn-light btn-lg download-button"> Download</button>
+    <button type="button" class="fa-brands fa-apple btn btn-dark btn-lg download-button"><span class="download-font"> Download</span></button>
+    <button type="button" class="fa-brands fa-google-play btn btn-light btn-lg download-button"><span class="download-font"> Download</span></button>
 
   </section>
 
